--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
             </div>
         </div>
      </header>
-     <div class="main-entry">
-        <h1>Microblogging , nothing more than just Microblogging on <b style="color: #4070f4; background-image: red;">tweatFlash</b></h1>
+     <div class="main-entry" style="height: calc(100vh - 100px);">
+        <h1>Explore what is Happening in the world on <b style="color: #4070f4; background-image: red;">tweatFlash</b></h1>
         <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque alias tempore quia numquam quos nesciunt,</p>
         <div class="get-started-modal">
             Get Started. it's Free
         </div>
+        <p style="margin-top: 10px;">Free forever no credit card</p>
+     </div>
+     <div class="main-entry" style="height: 100vh;">
+        
+        <h1 style="padding-top: 30px;">All you need for <b style="color: #4070f4; ">Microbloggging</b></h1>
      </div>
 </body>
 </html>
