--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </div>
      </header>
      <div class="main-entry" style="height: calc(100vh - 100px);">
-        <h1>Explore what is Happening in the world on <b style="color: #4070f4; background-image: red;">tweatFlash</b></h1>
+        <h1>Explore what is Happening in the world on <b style="-webkit-text-fill-color: transparent; 
+            -webkit-background-clip: text;
+            background-image: linear-gradient(to right,#4070f4,darkblue ,purple); font-weight: bolder;" >tweatFlash</b></h1>
         <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque alias tempore quia numquam quos nesciunt,</p>
         <div class="get-started-modal">
             Get Started. it's Free
